--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "set \"NODE_OPTIONS=--experimental-vm-modules\" && npx jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js"
   },
-  "keywords": [],
+  "type": "module",
+  "jest": {
+    "verbose": false
+  },
+   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
