--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "set \"NODE_OPTIONS=--experimental-vm-modules\" && npx jest",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js"
   },
-  "type": "module",
-  "jest": {
-    "verbose": false
-  },
-   "keywords": [],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
