--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/server/index.js",
+    "start": "node src/server/express.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js"
   },
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest-fetch-mock": "^3.0.3",
+    "supertest": "^6.2.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
@@ -31,7 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.4.1",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass": "^1.32.8",
